--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "mongoose": "^8.3.1",
     "openai": "^4.33.0",
     "telegraf": "^4.16.3"
