--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Noyon Rahman",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.5.0",
     "dotenv": "^16.4.5",
     "mongoose": "^8.3.1",
-    "openai": "^4.33.0",
     "telegraf": "^4.16.3"
   },
   "devDependencies": {
